--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body {
 
 /* Site Nav + Hero*/
 .title {
-  font-family: 'Roboto', sans-serif;
+  font-family: inherit;
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
@@ -75,7 +75,7 @@ body {
 }
 
 .button {
-  font-family: 'Roboto', sans-serif;
+  font-family: inherit;
   font-weight: 600;
   font-size: 16px;
   line-height: 1.19;
@@ -141,7 +141,8 @@ body {
 
 /* Portfolio */
 .button-portfolio {
-  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
+  font-family: inherit;
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
@@ -160,6 +161,7 @@ body {
   color: var(--white);
   background-color: #404bbf;
 }
+
 /* body {
   font-family: 'Roboto';
   font-weight: 400;
